# sandboxes

./: .gitignore
StickerSmash/: app.json  eas.json  package-lock.json  package.json
StickerSmash/app/: +not-found.tsx  _layout.tsx  index.tsx
StickerSmash/components/: Button.tsx  CircleButton.tsx  EmojiList.tsx  EmojiPicker.tsx  EmojiSticker.tsx  ImageViewer.tsx
flutter_github_client/: README.md  pubspec.yaml
flutter_github_client/lib/: github_oauth_credentials.dart  main.dart
flutter_github_client/linux/: CMakeLists.txt  my_application.cc
flutter_github_client/windows/: CMakeLists.txt
flutter_instagram_clone/: README.md  pubspec.yaml
flutter_instagram_clone/lib/: main_development.dart
flutter_instagram_clone/web/: index.html  manifest.json
flutter_instagram_clone/windows/: CMakeLists.txt
go-rss/: go.mod  main.go
google-news-rss-parser/: .gitignore  README.md  package.json  pnpm-lock.yaml  wrangler.toml
google-news-rss-parser/app/: entry.server.tsx
google-news-rss-parser/functions/: [[path]].js  [[path]].js.map  metafile.css.json  metafile.js.json  metafile.server.json  version.txt
kanaya-linebot/: README.md  drizzle.config.ts  package-lock.json  package.json
kanaya-linebot/migrations/: 0000_lethal_vulture.sql
kanaya-linebot/src/: index.ts  middleware.ts  type.ts
mailer-gee/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.toml
mailer-gee/app/: entry.server.tsx
my-hono-app/: package-lock.json  package.json  wrangler.jsonc
polished-bread-e376/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
pronunciation-practice-app/api/: Dockerfile  README.md  deployment.yaml  pyproject.toml
pronunciation-practice-app/api/pronunciation_practice_app_api/: main.py  phoneme.py
pronunciation-practice-app/backend/: main.py  pyproject.toml
rr7-cloudflare/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
scripts/: test.txt  test2.txt  txt  xgcm
shadotube/: components.json  package-lock.json  package.json  tsconfig.cloudflare.json  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.toml
shadotube-RN/: package-lock.json  package.json
shopify-polaris-dnd-practice/: package-lock.json  package.json
slack-video-app/: main.py  pyproject.toml
slack-video-app/tmp/: ex.py
yot/: package-lock.json  package.json
youtubedl-sample/: index.js  package-lock.json  package.json  videoInfo.json
(+90 files in other folders)
