[tool.poetry]
name = "pronunciation-practice-app-api"
version = "0.1.0"
description = ""
authors = ["Angelos Panagiotopoulos <angelospanag@protonmail.com>"]
readme = "README.md"
packages = [{ include = "pronunciation_practice_app_api" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
structlog = "^23.2.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
openai = "^1.40.3"
phonemizer = "^3.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
httpx = "^0.26.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]

# Note: Ruff supports a top-level `src` option in lieu of isort's `src_paths` setting.
src = ["pronunciation_practice_app_api", "tests"]

ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
