[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yoshiki masubuchi <yoshixi.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.40.3"
fastapi = "^0.112.0"
phonemizer = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
